<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andriginting.projectlocation.editProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profil_layout1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/foto_profil"
            android:src="@drawable/logo_bulat"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="#ff000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/edit_gambarProfil"
            android:onClick="change_foto"
            android:paddingLeft="10dp"
            android:text="@string/change_profile_photo"
            android:textSize="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textColor="#1c7920"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/profil_layout1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ganti_nama"
            android:text="@string/display_name"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_namaProfil2"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="nama"
            android:textColor="#1c7920"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/ganti_email"
            android:text="@string/e_mail"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_email2"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="email"
            android:textColor="#1c7920"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:id="@+id/ganti_kota"
            android:text="@string/kota"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_kota2"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Kota"
            android:textColor="#1c7920"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nomor_telepon"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_telpon2"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Belum Tersedia"
            android:textColor="#1c7920"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save_profile"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:id="@+id/tombol_savepropil"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:background="#2fa127" />
</RelativeLayout>
